--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "dependencies": {
     "axios": "^1.6.8",
     "express": "^4.19.2",
-    "playwright": "^1.43.0"
+    "playwright": "1.57.0"
   }
 }
